# tokotchi

./: .gitignore  Cargo.toml  LICENSE  README.md  dev.sh  install.sh  tokotchi.py
.github/workflows/: release.yml
art/beast/: blink.txt  idle.txt  sad.txt
art/blob/: blink.txt  idle.txt  sad.txt
art/critter/: blink.txt  idle.txt  sad.txt
art/egg/: blink.txt  idle.txt  sad.txt
art/elder/: blink.txt  idle.txt  sad.txt
art/sprout/: blink.txt  idle.txt  sad.txt
src/: anim.rs  care.rs  ledger.rs  level_cli.rs  lib.rs  main.rs  mode.rs  model.rs  state.rs  tui.rs
tests/: scan_parity.rs
