[package]
name = "tokotchi"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A collectible terminal pet that levels off your Claude Code token usage."
repository = "https://github.com/rynzuki/tokotchi"

[[bin]]
name = "tokotchi"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
fastrand = "2"
include_dir = "0.7"   # embed the art/ tree into the binary at compile time
unicode-width = "0.2" # correct display-width for art alignment/validation

[profile.release]
opt-level = "z"     # small + fast-to-spawn: `level` runs on every statusline render
lto = true
strip = true
codegen-units = 1
